fix aligning issue of loader on quote details page

--- a/client/vite-project/src/components/quote-details/QuoteDetails.module.scss
+++ b/client/vite-project/src/components/quote-details/QuoteDetails.module.scss
@@ -88,4 +88,5 @@
 .quote__details__loader__container {
     grid-row: 2 / 3;
     grid-column: 2 / 3;
+    justify-self: center;
 }
